src-ken&y/objects/Process_Automation__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Automate a series of operations</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Checked to include in automation, unchecked to exclude from all automation</description>
        <inlineHelpText>Checked to include in automation, unchecked to exclude from all automation</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ExtId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Field_Name__c</fullName>
        <label>Field Name</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_Value__c</fullName>
        <label>Field Value</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Latency__c</fullName>
        <defaultValue>300</defaultValue>
        <description>Specify the number of seconds to re-schedule the next run of this process</description>
        <inlineHelpText>Specify the number of seconds to re-schedule the next run of this process</inlineHelpText>
        <label>Latency</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_DML__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Select this checkbox if the Apex Method will perform DML operations, otherwise system will perform DML</description>
        <inlineHelpText>Select this checkbox if the Apex Method will perform DML operations, otherwise system will perform DML</inlineHelpText>
        <label>Method DML</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Method_Name__c</fullName>
        <label>Method Name</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Next_Run_After__c</fullName>
        <description>calculated time in the future when this job may be run again</description>
        <inlineHelpText>calculated time in the future when this job may be run again</inlineHelpText>
        <label>Next Run After</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Object_Name__c</fullName>
        <label>Object Name</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <defaultValue>100</defaultValue>
        <description>Indicates the relative order 1-999, 1 is highest priority</description>
        <inlineHelpText>Indicates the relative order 1-999, 1 is highest priority</inlineHelpText>
        <label>Priority</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Process Automation</label>
</CustomObject>